--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Schatzbuch</h1>
-        <p>Bem-vindo, <span id="username-display">Usuário</span></p>
+        <p>Olá novamente, <span id="username-display">Usuário</span></p>
         <button id="logout">Sair</button>
     </header>
     
