--- a/dashboard.html
+++ b/dashboard.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Schatzbuch</h1>
-        <p>Olá novamente, <span id="username-display">Usuário</span></p>
+        <h2>Bem-vindo(a), <span id="username-display">Usuário</span></h2>
         <button id="logout">Sair</button>
     </header>
     
